Fixed alignment of issue introduction and download buttons.

--- a/resources/c/partial/single_issue.sass
+++ b/resources/c/partial/single_issue.sass
@@ -31,10 +31,10 @@ $mobi-button-colour: #006b00
 #contents-actions-container
   .download-btn-wrapper
     text-align: left
-    padding: 0 1.7rem
+    padding: 0 1rem
     .download
       height: 40px
-      width: 32%
+      width: 33.3%
       display: inline-block
       border: 0
       padding: 0 0 0.5rem 0
